changes from revision r40080 reverted

--- a/opencl-intel/backend/validations/SATest/CMakeLists.txt
+++ b/opencl-intel/backend/validations/SATest/CMakeLists.txt
@@ -59,17 +59,6 @@ if (INCLUDE_MIC_DEVICE)
     endif (KNC_CARD)
 endif (INCLUDE_MIC_DEVICE)
 
-if (CMAKE_SIZEOF_VOID_P EQUAL 4)
-  set (ICC_PLATFORM ia32)
-else ()
-  set (ICC_PLATFORM intel64)
-endif ()
-
-get_target_property( lib_dir NEAT_wrapper lib_dir )
-set (ICC_WIN32_PATH $ENV{ICPP_COMPILER12})
-set( intel_lib_dir "${ICC_WIN32_PATH}/compiler/lib/${ICC_PLATFORM}")
-link_directories( ${lib_dir} ${intel_lib_dir} )
-
 include_directories(
     ${VALIDATIONS_ROOT}/SATest
     ${VALIDATIONS_ROOT}/DataManager
@@ -218,44 +207,24 @@ set (LLVM_LIBS
 set (SATest_DEPS
     DataManager
     Comparator
-    OCLInterpreter
+    LLVMInterpreter
     LLVMInterpreterPluggable
     ${LLVM_LIBS}
+    NEAT
+    PlugInNEAT
     dynamic_load
     )
 
-if (WIN32)
 target_link_libraries(SATest
     ${SATest_DEPS}
-    NEAT
-    PlugInNEAT
-    ImathLibd
+    dynamic_load
     )
 
 add_dependencies(SATest
     ${SATest_DEPS}
     OclCpuBackEnd
-    NEAT_wrapper
-    PlugInNEAT
-    ImathLibd_wrapper
+    dynamic_load
     )
-else ()
-
-target_link_libraries(SATest
-    ${SATest_DEPS}
-    NEAT
-    PlugInNEAT
-    ${LLVM_BINARY_DIR}/lib/libImathLibd.so
-    )
-
-add_dependencies(SATest
-    ${SATest_DEPS}
-    OclCpuBackEnd
-    NEAT
-    PlugInNEAT
-    ImathLibd_wrapper
-    )
-endif ()
 
 if (INCLUDE_MIC_DEVICE)
 add_subdirectory(MICNative)
