Added SimplifyGep pass, this pass search for GetElementPtrInst that contains more than one index and if the base address of the GEP has base type which is not structure or pointer then it 1. replaces the GEP last index with zero. 2. creates a new GEP with the original GEP as its base and the original GEP last index as its only index.
This pass runs just before packetizer pass and prior to WIAnalysis pass.

Reviewers: Ran & Ayal
http://cvcc-ubu-01.iil.intel.com/cr/r/1038/diff/#index_header

Pre-commit:
http://cvcc-fc14-01.iil.intel.com:8080/job/PersonalCompilerReport/924/

--- a/opencl-intel/backend/vectorizer/CMakeLists.txt
+++ b/opencl-intel/backend/vectorizer/CMakeLists.txt
@@ -17,6 +17,7 @@ add_llvm_library( LLVMVectorizer
   Utils/Namer.cpp
   Utils/SpecialCaseFuncs.cpp
   Utils/RuntimeServices.cpp
+  Utils/SimplifyGEP.cpp
   Driver/OpenCL/OpenclRuntime.cpp
   Driver/OpenCL/OCLData.cpp
   Driver/DX/DXRuntime.cpp
