1. Added initial MKL functions support (SGEMM/DGEMM). Disabled by default. Require --mkl flag to be passed to Built.py 2. CSSD100013640 - clCreateProgramWithBuiltInKernels() throws SEH exception with code 0xc0000005 - resolved. If MKL enabled returns a list of supported function. Currently SGEMM and DGEMM. Otherwise, empty list.
Review: Vlad/Aharon/Dima.
Test: Pre-commit

--- a/opencl-intel/CMakeLists.txt
+++ b/opencl-intel/CMakeLists.txt
@@ -80,12 +80,14 @@ if (WIN32)
     set(IMPLIB_SUBDIR lib)
     set(IMPLIB_PREFIX    )
     set(IMPLIB_SUFFIX .lib)
+	set(IMPLIB_STATIC_SUFFIX .lib)
 	set(DLL_SUFIX .dll)
 else ()
     set(OS Lin)
     set(IMPLIB_SUBDIR bin)
     set(IMPLIB_PREFIX lib)
     set(IMPLIB_SUFFIX .so)
+	set(IMPLIB_STATIC_SUFFIX .a)
 	set(DLL_SUFIX .so)
 endif( WIN32)
 
