Log message: <LOG_BODY> - the text of worning messages in CMakeLists.txt files changed, the version of required icc compiler for windows added <CODE_REVIEW> - None <PERF_IMPLICATIONS> - None. <TEST> - local unittest

--- a/opencl-intel/backend/validations/ImathLibd/CMakeLists.txt
+++ b/opencl-intel/backend/validations/ImathLibd/CMakeLists.txt
@@ -17,7 +17,7 @@ project( ${TARGET_NAME} )
 
   set (ICC_WIN32_PATH $ENV{ICPP_COMPILER12})
   if (NOT DEFINED ICC_WIN32_PATH)
-    message (FATAL_ERROR "ICC is not installed in the system")
+    message (FATAL_ERROR "ICC 12 is not installed in the system")
   endif ()
   set (ICC_CPU_ENV_SCRIPT ${ICC_WIN32_PATH}/bin/iclvars.bat)
   if (NOT EXISTS ${ICC_CPU_ENV_SCRIPT})
