1. Added registration with VTune API for each deserialized JITed kernel. 2. Added unregistration with VTune API for each JITed kernel being disposed. 3. Added some accessors to MICJITContainer. 4. Fixed CMake files where needed.
CR: http://cvcc-ubu-01.iil.intel.com/cr/r/1135/ (Mohammad, Vlad)

Test:
Pre-commit http://cvcc-fc14-01.iil.intel.com:8080/job/PersonalCompilerReport/1044/
MIC pre-commit (SDE)
MaxFlops (MIC KNC device)
Performance: no impact on generated code

--- a/opencl-intel/backend/validations/SATest/MICNative/CMakeLists.txt
+++ b/opencl-intel/backend/validations/SATest/MICNative/CMakeLists.txt
@@ -170,6 +170,7 @@ list( APPEND MIC_FLAGS
                 -I ${BACKEND_ROOT_DIR}/ocl_cpu_backend/export
                 -I ${BACKEND_ROOT_DIR}/../cl_api
                 -I ${COI_DIR}/include
+                -I ${BACKEND_ROOT_DIR}/external/vtune/include
                 )
 
 # MIC linking flags
@@ -199,6 +200,9 @@ list( APPEND MIC_LINK_FLAGS
                 #  \\\$ will result in passing \$ to the linker script
                 -Wl,-rpath=\\\$ORIGIN -Wl,--enable-new-dtags
                 )
+if (KNC_CARD)
+  list(APPEND MIC_LINK_FLAGS -L ${BACKEND_ROOT_DIR}/external/vtune/libknc -ljitprofiling)
+endif (KNC_CARD)
 
 set( MIC_DEBUG_LINK_FLAGS     )
 set( MIC_RELEASE_LINK_FLAGS   )
