(1)Remove ForceTransferToDevice() in case of read operation.\n (2)change MIC device CMakes to take libs and headers of tbb and coi from the original installtion path instead of from src\external.\n (3)change MIC device side debuging method - Now setting global variable instead of 'set current location' in debuger.\n (4)Open sub buffer option - common context did not implemented yet in R.T.\n (5)Temporary update COI and TBB in 'src/external'.\n (6) Add -lpthread to SATest linkage

--- a/opencl-intel/backend/validations/SATest/MICNative/CMakeLists.txt
+++ b/opencl-intel/backend/validations/SATest/MICNative/CMakeLists.txt
@@ -187,6 +187,8 @@ list( APPEND MIC_LINK_FLAGS
                 -lcoi_device
                 -lOclDeviceExecutor
 
+                -lpthread
+
                 # add unused defined symbols to the dynamic symbol table - they will be used dynamically
                 -rdynamic
 
