Support for debugging of kernel/barrier functions in MCJIT using gdb.
C/R: Eli Bendersky, Amjad Aboud
C/R link: http://cvcc-ubu-01.iil.intel.com/cr/r/1146/

Tests run: Private Compiler Build
Tests run link: http://cvcc-fc14-01.iil.intel.com:8080/job/PCompiler_mkopec1/11/
Tests run: Private Compiler Tests
Tests run link: http://cvcc-fc14-01.iil.intel.com:8080/job/PersonalCompilerTests/1039

--- a/opencl-intel/backend/barrier/CMakeLists.txt
+++ b/opencl-intel/backend/barrier/CMakeLists.txt
@@ -1,6 +1,6 @@
 file(GLOB_RECURSE headers *.h)
 include_directories(BEFORE "include")
-include_directories(${BACKEND_ROOT_DIR}/../cl_api)
+include_directories(${BACKEND_ROOT_DIR}/../cl_api ${BACKEND_ROOT_DIR}/ocl_cpu_backend)
 
 add_llvm_library( LLVMBarrier
   BarrierInFunctionPass.cpp
@@ -10,6 +10,7 @@ add_llvm_library( LLVMBarrier
   DataPerBarrierPass.cpp
   DataPerInternalFunctionPass.cpp
   DataPerValuePass.cpp
+  ImplicitGIDPass.cpp
   RedundantPhiNodePass.cpp
   RemoveDuplicationBarrierPass.cpp
   SplitBBonBarrierPass.cpp
