Fixed CQ ticket CSSD100013946: [Adobe] : compilation of a kernel causes a crash in Barrier pass. The crash was in PhiCanon pass (called from barrier pass). The bug was in handling switch terminators when more than one case jump to same basic block. Fixed by break after finding first suitable case to fix, what leaves the other similar cases for next fix iteration to be fixed. Added a new PhiCanon LIT test that covers this case.
Reviewed by Ran
Pre-commit:
http://cvcc-fc14-01.iil.intel.com:8080/job/PersonalCompilerReport/1097/

--- a/opencl-intel/backend/tests/vectorizer/CMakeLists.txt
+++ b/opencl-intel/backend/tests/vectorizer/CMakeLists.txt
@@ -105,7 +105,7 @@ if(PYTHONINTERP_FOUND)
                 --param build_mode=${RUNTIME_BUILD_MODE}
                 ${LIT_ARGS}
                 ${CMAKE_CURRENT_BINARY_DIR}
-                COMMENT "Running LLVM regression tests")
+                COMMENT "Running LLVM vectorizer tests")
   set_target_properties(check_vectorizer PROPERTIES FOLDER "Tests")
 
   add_custom_target(check_vectorizer.deps)
