Fix for CSSD100013925: MICRegression project causes the .svn directories to be copied to the install path
Added an exception pattern for  .svn/

CR: http://cvcc-ubu-01.iil.intel.com/cr/r/1200

--- a/opencl-intel/backend/CMakeLists.txt
+++ b/opencl-intel/backend/CMakeLists.txt
@@ -272,6 +272,7 @@ set_target_properties( OCLSamplePlugin PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/
 
 set_target_properties( tinyxml_STL PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/externals )
 
-install(DIRECTORY tests/MIC/satest/mic/ DESTINATION
-    bin/validation/MICRegression/)
+install(DIRECTORY tests/MIC/satest/mic/
+    DESTINATION bin/validation/MICRegression/
+    PATTERN .svn/ EXCLUDE)
 
